<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/usernameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usernameET"
        android:layout_below="@+id/imageViewLogo"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/usernameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/passwordET"
        android:layout_below="@+id/usernameTV"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/passwordTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usernameET"
        android:layout_below="@+id/usernameET"
        android:layout_marginTop="19dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordTV"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgetTV"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button"
        android:textColor="#FFFFFFFF"
        android:text="@string/login" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordTV"
        android:layout_below="@+id/passwordET"
        android:text="@string/rememberme"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/forgetTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordTV"
        android:layout_below="@+id/checkBox1"
        android:text="@string/forgetpassword"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#0000FF" />
    
</RelativeLayout>
